@@ -45,6 +45,9 @@ $ -> Language fix or change
 + Added permissions to component configuration.
 ^ Split com_banners helper into site and admin; renamed to BannersHelper.
 
+01-Oct-2009 Ian MacLennan
+ # [#16484] Changed addslashes to addcslashes in RegistryFormatPHP so that only \ and ' get slashes added.  (fix from 1.5)
+
 01-Oct-2009 Ercan Ozkaya
  ^ Replaced all $ instances to document.id for Mootools except third party classes
  + Added transliteration override support for language packs
